# consume_batch

./: .gitignore  README.md
consume_batch/: .env.copy  BLUE_GREEN_DEPLOYMENT.md  CONSUMER_GROUP_USAGE.md  Cargo.toml  PROJECT_ISSUES_2026-05-21.md  PROJECT_REVIEW_2026-05-29.md  RISK_ANALYSIS.md  diesel.toml  참고.md
consume_batch/docs/: cli_architecture.md  handle_socket_connection_deep_dive.md  ref.md  socket_server_flow.md  spawn_blocking_why.md
consume_batch/logs/: test.json
consume_batch/mz/: anal.md  danal_payment_be_interview_prep.md  elasticsearch_7_5_jdk_jvm_stabilization.md  info.md
consume_batch/src/: app_config.rs  common.rs  global_state.rs  main.rs  schema.rs
consume_batch/src/api/: kis_api.rs  mod.rs  twelve_data_api.rs
consume_batch/src/config/: batch_schedule.toml  batch_schedule_prod.toml  environment.rs  mod.rs
consume_batch/src/configuration/: config_settings.rs  elasitc_index_name.rs  mod.rs
consume_batch/src/controller/: batch_controller.rs  cli_client_controller.rs  main_controller.rs  mod.rs
consume_batch/src/dtos/: elastic_query.rs  mod.rs  report.rs
consume_batch/src/entity/: agg_group.rs  cash_asset.rs  common_consume_keyword_type.rs  common_consume_prodt_keyword.rs  consume_prodt_detail.rs  consume_prodt_detail_backupver.rs  consume_prodt_keyword.rs  consumue_keyword_type.rs  crypto.rs  crypto_asset.rs  currency_code.rs  currency_exchange_rate_snapshot.rs  deposit_asset.rs  dim_calendar.rs  earned_detail.rs  kis_api_token.rs  mod.rs  prelude.rs  saving_asset.rs  send_email_agg_group.rs  spent_detail.rs  spent_detail_indexing.rs  spent_group_info.rs  stock.rs  stock_asset.rs  stock_type.rs  telegram_room.rs  user_current_asset_snapshot.rs  user_payment_method.rs  user_payment_methods.rs  users.rs  users_email.rs
consume_batch/src/enums/: final_action.rs  indexing_type.rs  mod.rs  range_operator.rs
consume_batch/src/models/: agg_group.rs  agg_result_set.rs  (+41 more)
(+67 files in other folders)
