[package]
name = "consume_batch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getset = "0.1.2"
derive-new = "0.6.0"
once_cell = "1.19.0"
elasticsearch = "8.16.0-alpha.1"
async-trait = "0.1.83"
chrono = "0.4.31"
chrono-tz = "0.9.0"
kafka = "0.10.0"
r2d2 = "0.8.10"
diesel = { version = "2.2.6", features = ["mysql", "r2d2"] }