[package]
name = "consume_batch_v1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["full"] } 
reqwest = { version = "0.13", features = ["json"] }
dotenv = "0.15.0"
flexi_logger = "0.31"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getset = "0.1.2"
derive-new = "0.6.0"
percent-encoding = "2.3.1"
futures = "0.3.30"
once_cell = "1.19.0"
elasticsearch = "9.1.0-alpha.1"
teloxide = "0.12.2"
regex = "1.10.5"
num-format = "0.4.4"
lazy_static = "1.5.0"
async-trait = "0.1.83"
mysql_async = "0.34.1"
strsim = "0.11.1"
rayon = "1.10.0"
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls", "with-rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rdkafka = "0.38.0"
toml = "0.8"
tokio-cron-scheduler = "0.13"
quick-xml = { version = "0.36", features = ["serialize"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
scraper = "0.22"
redis = { version = "1.2", features = ["aio", "tokio-comp", "connection-manager", "cluster", "cluster-async"] }